--- a/tests/LaunchGlob.Tests/LaunchGlob.Tests.csproj
+++ b/tests/LaunchGlob.Tests/LaunchGlob.Tests.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\ProjectName\ProjectName.csproj" />
+    <ProjectReference Include="..\..\src\LaunchGlob\LaunchGlob.csproj" />
   </ItemGroup>
 
 </Project>
