Create Windows Forms app.

--- a/src/LaunchGlob/LaunchGlob.csproj
+++ b/src/LaunchGlob/LaunchGlob.csproj
@@ -1,11 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Description>LaunchGlob class library.</Description>
-    <PackageTags></PackageTags>
-    <IsPackable>true</IsPackable>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <OutputType>WinExe</OutputType>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <UseWindowsForms>true</UseWindowsForms>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ArgsReading" Version="2.3.0" />
+    <PackageReference Include="Glob" Version="1.1.6" />
+  </ItemGroup>
 
 </Project>
