--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,10 +21,7 @@ defaults:
     shell: pwsh
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: windows-latest
     steps:
     - name: Check out code
       uses: actions/checkout@v1
@@ -36,11 +33,3 @@ jobs:
       run: .\build.ps1 restore
     - name: Build
       run: .\build.ps1 build --skip restore
-    - name: Test
-      run: .\build.ps1 test --skip build
-    - name: Publish
-      if: runner.os == 'Windows' && github.repository_owner == 'ejball' && github.ref == 'refs/heads/master'
-      env:
-        BUILD_BOT_PASSWORD: ${{ secrets.BUILD_BOT_PASSWORD }}
-        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
-      run: .\build.ps1 publish --skip test
