--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,6 +21,8 @@ jobs:
     steps:
     - name: Install .NET
       uses: actions/setup-dotnet@v4
+      with:
+        global-json-file: './global.json'
     - name: Check out code
       uses: actions/checkout@v3
     - name: Restore
