--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,7 +17,7 @@ jobs:
     - name: Build
       run: .\build.ps1 package
     - name: Create zip
-      run: Compress-Archive .\artifacts\publish\LaunchGlob\release_win-x64\LaunchGlob.exe LaunchGlob.zip
+      run: Compress-Archive .\artifacts\publish\${{ github.event.repository.name }}\release_win-x64\${{ github.event.repository.name }}.exe ${{ github.event.repository.name }}.zip
     - name: Create release
       id: create_release
       uses: actions/create-release@v1
@@ -35,6 +35,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./LaunchGlob.zip
-        asset_name: LaunchGlob.zip
+        asset_path: ./${{ github.event.repository.name }}.zip
+        asset_name: ${{ github.event.repository.name }}.zip
         asset_content_type: application/zip
